--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -277,11 +277,11 @@
                         <p class="text-muted mb-4">{{ active_promotion.description }}</p>
                         
                         {% if user.is_authenticated %}
-                             <a href="{% url 'catalogue:product_list' %}" class="btn btn-dark btn-lg w-100 rounded-pill">Shop Now</a>
+                             <a href="/shop/" class="btn btn-dark btn-lg w-100 rounded-pill">Shop Now</a>
                         {% else %}
-                             <a href="{% url 'register' %}" class="btn btn-primary btn-lg w-100 rounded-pill mb-2">Register to Claim</a>
+                             <a href="/accounts/register/" class="btn btn-primary btn-lg w-100 rounded-pill mb-2">Register to Claim</a>
                              <p class="small text-muted text-center mt-2">
-                                 Already have an account? <a href="{% url 'login' %}" class="text-primary">Login</a>
+                                 Already have an account? <a href="/accounts/login/" class="text-primary">Login</a>
                              </p>
                         {% endif %}
                     </div>
