--- a/templates/base.html
+++ b/templates/base.html
@@ -481,7 +481,7 @@
                 <p class="small text-secondary mb-0">© {% now "Y" %} Sellux Plaster Ltd. All Rights Reserved.</p>
             </div>
             <div class="col-md-6 text-center text-md-end">
-                <p class="small text-secondary mb-0">Powered by InsightWeb</p>
+                <p class="small text-secondary mb-0">Powered by InsightW3b</p>
             </div>
         </div>
     </div>
