--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -605,9 +605,9 @@
             <h2 class="section-title mt-3 mb-4">Core <span class="gradient-text">Services</span></h2>
             <p class="section-subtitle mx-auto">Comprehensive architectural solutions crafted with precision and excellence</p>
         </div>
-        <div class="row g-4">
+        <div class="row g-4 justify-content-center">
             {% for service in featured_services %}
-            <div class="col-md-6 col-lg-3">
+            <div class="col-md-6 col-lg-5">
                 <div class="luxury-service-card h-100">
                     <div class="service-icon-wrapper">
                         <div class="service-icon-bg"></div>
