--- a/templates/services/service_list.html
+++ b/templates/services/service_list.html
@@ -32,7 +32,7 @@
 <!-- Services Grid Section -->
 <section class="services-grid-section py-5 my-5">
     <div class="container py-4">
-        <div class="row g-4 g-lg-5">
+        <div class="row g-4 g-lg-5 justify-content-center">
             {% for service in services %}
             <div class="col-md-6 col-lg-4 animate__animated animate__fadeInUp" style="animation-delay: {{ forloop.counter0 }}00ms;">
                 <div class="premium-service-card h-100">
